# nonebot_template_plugin

./: README.md  pyproject.toml
nonebot_template_plugin/: __init__.py  types.py  utils.py
nonebot_template_plugin/res/txt/: 1.txt  2.txt  3.txt
